[package]
name = "covid"
version = "0.1.0"
authors = ["Chris Butler <chrisbutler296@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-sdl2              = "0.8"
ultraviolet             = "0.4"
sdl2                    = "0.33"
gl                      = "0.14"
imgui-opengl-renderer   = "0.6"
